--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -7,6 +7,8 @@ on:
     # https://crontab.guru/
     # '*/n' = 'every n minutes'
     - cron: "*/10 * * * *"
+  # Allow running manually
+  workflow_dispatch:
 
 jobs:
   scrape:
