--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -21,5 +21,5 @@ jobs:
           python-version: "3.8"
       - name: "Install"
         run: scripts/install
-      - name: "Scrape"
-        run: scripts/scrape
+      - name: "Tentative scrap"
+        run: prototype.py
