Fix branch name

--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -40,4 +40,4 @@ jobs:
 
           # Optional branch name where commit should be pushed to
           # Defaults to the current branch
-          branch: data
+          branch: data-auto
