--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -26,7 +26,7 @@ jobs:
       - name: "Install"
         run: scripts/install
       - name: "Scraping..."
-        run: venv/bin/python3 prototype.py
+        run: venv/bin/python3 scraper/prototype.py
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: Automatic Update
