--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -31,4 +31,4 @@ jobs:
         with:
           commit_message: Automatic Update
           branch: data-auto
-          push_options: '--force'
+          push_options: '--force origin data-auto'
