Added skill checks for specialties -> some vaccination centers were skipped

--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -9,6 +9,8 @@ on:
     - cron: "*/5 * * * *"
   # Allow running manually
   workflow_dispatch:
+  push:
+    branches: ["aureliancnx-keldoc-1"] # for test purposes
 
 jobs:
 
