--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -2,10 +2,10 @@
 name: Scrape
 
 on:
-  # https://docs.github.com/en/actions/reference/events-that-trigger-workflows#scheduled-events
+  push:
+    branches:
+      - data-auto
   schedule:
-    # https://crontab.guru/
-    # '*/n' = 'every n minutes'
     - cron: "*/5 * * * *"
   # Allow running manually
   workflow_dispatch:
@@ -23,6 +23,7 @@ jobs:
       - uses: "actions/setup-python@v2"
         with:
           python-version: "3.8"
+          token: ${{ secrets.PAT_GRZ }}
       - name: "Install"
         run: scripts/install
       - name: "Scraping..."
