Added GA loop sleep in order to avoid IP range ban from providers
(experimental)

--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -29,6 +29,10 @@ jobs:
         run: scripts/install
       - name: "Scraping..."
         run: scripts/scrape
+      - name: Sleep
+        uses: jakejarvis/wait-action@master
+        with:
+          time: '120s'
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: Automatic Update
