--- a/.github/workflows/scrape_and_publish.yml
+++ b/.github/workflows/scrape_and_publish.yml
@@ -29,6 +29,8 @@ jobs:
         run: scripts/install
       - name: "Scraping..."
         run: scripts/scrape
+      - name: "Stats"
+          run: venv/bin/python -m scraper.centres_stats
       - name: Sleep
         run: 'sleep 120s'
       - uses: stefanzweifel/git-auto-commit-action@v4
