--- a/.github/workflows/scrape_and_publish.yml
+++ b/.github/workflows/scrape_and_publish.yml
@@ -30,7 +30,7 @@ jobs:
       - name: "Scraping..."
         run: scripts/scrape
       - name: "Stats"
-          run: venv/bin/python -m scraper.centres_stats
+          run: make stats
       - name: Sleep
         run: 'sleep 120s'
       - uses: stefanzweifel/git-auto-commit-action@v4
