Install coverage badge?

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,6 +20,6 @@ jobs:
       - name: "Run tests"
         run: scripts/test
       - name: "Install coverage badge"
-        run: pip install coverage-badge
+        run: pip install pytest coverage coverage-badge
       - name: "Generate coverage badge"
         run: coverage-badge
