Added coverage badge before commit

--- a/.github/workflows/scrape_and_publish.yml
+++ b/.github/workflows/scrape_and_publish.yml
@@ -5,6 +5,7 @@ on:
   push:
     branches:
       - data-auto
+      - ft/readme
   schedule:
     - cron: "*/5 * * * *"
   # Allow running manually
@@ -31,6 +32,12 @@ jobs:
         run: scripts/scrape
       - name: "Stats"
         run: make stats
+      - name: "Run tests"
+        run: scripts/test
+      - name: "Install coverage badge"
+        run: pip install pytest coverage coverage-badge
+      - name: "Generate coverage badge"
+        run: coverage-badge -o .github/coverage.svg
       - name: Sleep
         run: 'sleep 30s'
       - uses: stefanzweifel/git-auto-commit-action@v4
