run all scheduled jobs on ovh

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,6 +30,8 @@ scrape:
 pages:
   stage: deploy
   image: python:3.8-alpine
+  tags:
+    - ovh
   script:
     - mkdir -p public
     - cp data/output/* public/
