--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -15,10 +15,10 @@ jobs:
     runs-on: "ubuntu-20.04"
 
     steps:
+      - uses: "actions/checkout@v2"
       - name: "Mirror to Gitlab.com"
         shell: bash
         env:
           GITLAB_TOKEN: ${{ secrets.GITLAB_TOKEN }}
-        run: "git push https://vitemadose-github:${GITLAB_TOKEN}@https://gitlab.com/ViteMaDose/vitemadose.git"
-      - uses: "actions/checkout@v2"
+        run: "git push https://vitemadose-github:${GITLAB_TOKEN}@https://gitlab.com/ViteMaDose/vitemadose.git main"
 
