--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -20,5 +20,5 @@ jobs:
         shell: bash
         env:
           GITLAB_TOKEN: ${{ secrets.GITLAB_TOKEN }}
-        run: "git push https://vitemadose-github:${GITLAB_TOKEN}@https://gitlab.com/ViteMaDose/vitemadose.git main"
+        run: "git push https://vitemadose-github:${GITLAB_TOKEN}@gitlab.com/ViteMaDose/vitemadose.git main"
 
