--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -16,6 +16,9 @@ jobs:
 
     steps:
       - uses: "actions/checkout@v2"
+        with:
+          ref: main
+          fetch-depth: 0
       - name: "Mirror to Gitlab.com"
         shell: bash
         env:
