--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -27,3 +27,7 @@ jobs:
         run: scripts/install
       - name: "Scraping..."
         run: scripts/scrape
+      - uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: Automatic Update
+          push_options: '--force HEAD:dev'
