--- a/.github/workflows/doctolib_center_scrap.yml
+++ b/.github/workflows/doctolib_center_scrap.yml
@@ -21,13 +21,13 @@ jobs:
           python-version: "3.8"
       - name: "Install"
         run: make install
-      - name: "Doctolib scrap..."
-        run: echo "[]" > data/output/doctolib-centers.json
       - name: "Get folder from data-auto"
         run: |
-          git clone --branch data-auto git@github.com:CovidTrackerFr/vitemadose.git tmp/
+          git clone --branch data-auto https://github.com/CovidTrackerFr/vitemadose.git tmp/
           cp -R tmp/data/output data/output
           rm -rf tmp/
+      - name: "Doctolib scrap..."
+        run: echo "[]" > data/output/doctolib-centers.json
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
           branch: data-auto
