--- a/.github/workflows/doctolib_center_scrap.yml
+++ b/.github/workflows/doctolib_center_scrap.yml
@@ -3,7 +3,7 @@ name: Doctolib center scrap
 
 on:
   schedule:
-    - cron: "0 * * * *"
+    - cron: "0 */6 * * *"
   # Allow running manually
   workflow_dispatch:
 
