essaye de curler doctolib avant le job pour savoir plus vite si on est ban

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,6 +25,7 @@ trouver_les_rdv:
     - ./scripts/install
     - echo IP publique de sortie du gitlab runner $(curl iconfig.me)
     - traceroute -4 -l -I partners.doctolib.fr
+    - curl -I --fail https://partners.doctolib.fr/
   script:
     - ./scripts/scrape
     - make stats
