--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,7 @@ trouver_les_rdv:
     - ./scripts/install
     - echo IP publique de sortie du gitlab runner $(curl -s https://ifconfig.me/ip )
     - traceroute -4 -l -I partners.doctolib.fr
-    - curl -I --fail https://partners.doctolib.fr/
+    - curl --silent --fail --head https://partners.doctolib.fr/
   script:
     - ./scripts/scrape
     - make stats
