Added appointment count in stats.json

--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -3,7 +3,7 @@ name: Scrape
 
 on:
   push:
-    branches: ["main", "fix/doctolib"]
+    branches: ["main", "ft/appointmentcount"]
   workflow_dispatch:
 
 jobs:
