--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -16,4 +16,4 @@ jobs:
       - name: flake8 Lint
         uses: py-actions/flake8@v1
         with: 
-          max-line-length: "120"
+          ignore: "E501"
