Removed Linting of W503

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -16,4 +16,6 @@ jobs:
       - name: flake8 Lint
         uses: py-actions/flake8@v1
         with: 
-          ignore: "E501"
+          ignore: 
+            - "E501"
+            - "W503"
