--- a/.github/workflows/scrape_and_publish.yml
+++ b/.github/workflows/scrape_and_publish.yml
@@ -2,11 +2,12 @@
 name: Scrape And Publish
 
 on:
-  push:
-    branches:
-      - data-auto
-  schedule:
-    - cron: "*/5 * * * *"
+## Disabled. Enable if emergency
+#  push:
+#    branches:
+#      - data-auto
+#  schedule:
+#    - cron: "*/5 * * * *"
   # Allow running manually
   workflow_dispatch:
 
