--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   linter:
+    runs-on: debian:latest
     steps:
     - uses: actions/checkout@v1
     - uses: ricardochaves/python-lint@v1.4.0
