--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -8,7 +8,8 @@ on:
 
 jobs:
   linter:
-    runs-on: debian:latest
+    name: Linter
+    runs-on: "ubuntu-20.04"
     steps:
     - uses: actions/checkout@v1
     - uses: ricardochaves/python-lint@v1.4.0
