Added maiia center scrap tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,4 +3,5 @@ addopts = scraper/ tests/ --doctest-modules
 
 [coverage:run]
 omit = venv/*
+       scraper/profiler.py
 include = scraper/*, tests/*
