--- a/.github/workflows/scrape_and_publish.yml
+++ b/.github/workflows/scrape_and_publish.yml
@@ -2,12 +2,12 @@
 name: Scrape And Publish
 
 on:
-  push:
-    branches:
-      - data-auto
-  schedule:
-    - cron: "*/5 * * * *"
-  # Allow running manually
+## Disabled. Enable if emergency
+ #  push:
+ #    branches:
+ #      - data-auto
+ #  schedule:
+ #    - cron: "*/5 * * * *"
   workflow_dispatch:
 
 jobs:
