ci: fix syntax x2

--- a/.github/workflows/scrape_doctolib.yml
+++ b/.github/workflows/scrape_doctolib.yml
@@ -31,5 +31,5 @@ jobs:
         run: scripts/install
       - name: "Scraping Doctolib..."
         run: scripts/scrape -p doctolib
-      - name: "Run git status (debug)
+      - name: Run git status (debug)
         run: git status
