--- a/.github/workflows/scrape_maiia.yml
+++ b/.github/workflows/scrape_maiia.yml
@@ -31,5 +31,5 @@ jobs:
         run: scripts/install
       - name: "Scraping Maiia..."
         run: scripts/scrape -p maiia
-      - name: "Run git status (debug)
+      - name: Run git status (debug)
         run: git status
