--- a/.github/workflows/scrape_mapharma.yml
+++ b/.github/workflows/scrape_mapharma.yml
@@ -31,5 +31,5 @@ jobs:
         run: scripts/install
       - name: "Scraping Mapharma..."
         run: scripts/scrape -p mapharma
-      - name: "Run git status (debug)
+      - name: Run git status (debug)
         run: git status
