--- a/.github/workflows/scrape_ordoclic.yml
+++ b/.github/workflows/scrape_ordoclic.yml
@@ -31,5 +31,5 @@ jobs:
         run: scripts/install
       - name: "Scraping Ordoclic..."
         run: scripts/scrape -p ordoclic
-      - name: "Run git status (debug)
+      - name: Run git status (debug)
         run: git status
