--- a/.github/workflows/scrape_mapharma.yml
+++ b/.github/workflows/scrape_mapharma.yml
@@ -33,3 +33,8 @@ jobs:
         run: scripts/scrape -p mapharma
       - name: Run git status (debug)
         run: git status
+      - uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+            commit_message: Automatic Update
+            file_pattern: data/output/pool/mapharma.json
+            push_options: '--force HEAD:data-auto'
