--- a/.github/workflows/scrape_doctolib.yml
+++ b/.github/workflows/scrape_doctolib.yml
@@ -34,7 +34,7 @@ jobs:
         run: |
           scripts/scrape -p doctolib
           cp data/output/pool/doctolib.json /tmp/doctolib.json
-      - name: Switch to data-auto
+      - name: "Switch to data-auto"
         run: |
           git switch origin data-auto
           cp /tmp/doctolib.json data/output/pool/doctolib.json
