--- a/.github/workflows/scrape_doctolib.yml
+++ b/.github/workflows/scrape_doctolib.yml
@@ -36,7 +36,8 @@ jobs:
           cp data/output/pool/doctolib.json /tmp/doctolib.json
       - name: "Switch to data-auto"
         run: |
-          git switch origin data-auto
+          git fetch --all --prune
+          git checkout data-auto
           cp /tmp/doctolib.json data/output/pool/doctolib.json
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
