--- a/.github/workflows/scrape_doctolib.yml
+++ b/.github/workflows/scrape_doctolib.yml
@@ -37,7 +37,8 @@ jobs:
       - name: "Switch to data-auto"
         run: |
           git fetch --all --prune --force
-          git checkout data-auto
+          git reset --hard origin/data-auto
+          git switch data-auto
           cp /tmp/doctolib.json data/output/pool/doctolib.json
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
