--- a/.github/workflows/scrape_merge.yml
+++ b/.github/workflows/scrape_merge.yml
@@ -30,9 +30,16 @@ jobs:
           python-version: "3.8"
       - name: "Install"
         run: scripts/install
+      - name: "Download platform files..."
+        run: |
+          cd /tmp
+          git clone --branch https://github.com/CovidTrackerFr/vitemadose repo/
+          cp repo/data/output/pool/* data/output/pool/
       - name: "Merge scrapers..."
         run: |
           scripts/scrape -m
+      - name: "Copy output files..."
+        run: |
           mkdir /tmp/output
           cp `find data/output -type f -exec basename '{}' ';' | egrep '^.{1,3}.json$' | sed 's/.*/data\/output\/&/'` /tmp/output
           cp data/output/centres_open_data.json /tmp/output
