--- a/.github/workflows/scrape_mapharma.yml
+++ b/.github/workflows/scrape_mapharma.yml
@@ -2,15 +2,11 @@
 name: Scrap Mapharma
 
 on:
-## Disabled. Enable if emergency
- #  push:
- #    branches:
- #      - data-auto
- #  schedule:
- #    - cron: "*/5 * * * *"
+  schedule:
+    - cron: "*/5 * * * *"
   push:
     branches:
-      - main
+      - data-auto
   workflow_dispatch:
 
 jobs:
