--- a/.github/workflows/scrape_keldoc.yml
+++ b/.github/workflows/scrape_keldoc.yml
@@ -38,5 +38,5 @@ jobs:
           cp /tmp/keldoc.json data/output/pool/keldoc.json
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
-            commit_message: Automatic Update
+            commit_message: "Updated scraper data: keldoc (pool/keldoc.json)"
             file_pattern: data/output/pool/keldoc.json
