--- a/.github/workflows/scrape_maiia.yml
+++ b/.github/workflows/scrape_maiia.yml
@@ -38,5 +38,5 @@ jobs:
           cp /tmp/maiia.json data/output/pool/maiia.json
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
-            commit_message: Automatic Update
+            commit_message: "Updated scraper data: maiia (pool/maiia.json)"
             file_pattern: data/output/pool/maiia.json
