--- a/.github/workflows/scrape_maiia.yml
+++ b/.github/workflows/scrape_maiia.yml
@@ -6,8 +6,7 @@ on:
   schedule:
     - cron: "*/5 * * * *"
   push:
-    branches:
-      - data-auto
+    branches: ["main", "data-auto"]
   workflow_dispatch:
 
 jobs:
