--- a/.github/workflows/scrape_mapharma.yml
+++ b/.github/workflows/scrape_mapharma.yml
@@ -5,8 +5,7 @@ on:
   schedule:
     - cron: "*/5 * * * *"
   push:
-    branches:
-      - data-auto
+    branches: ["main", "data-auto"]
   workflow_dispatch:
 
 jobs:
