--- a/.github/workflows/scrape_merge.yml
+++ b/.github/workflows/scrape_merge.yml
@@ -3,15 +3,10 @@
 name: Scrap merge
 
 on:
-## Disabled. Enable if emergency
- #  push:
- #    branches:
- #      - data-auto
- #  schedule:
- #    - cron: "*/5 * * * *"
+  schedule:
+    - cron: "*/5 * * * *"
   push:
-    branches:
-      - ft/merge
+    branches: ["main", "data-auto"]
   workflow_dispatch:
 
 jobs:
