ci: using workflow run events

--- a/.github/workflows/scrape_merge.yml
+++ b/.github/workflows/scrape_merge.yml
@@ -8,6 +8,10 @@ on:
   push:
     branches: ["main", "data-auto"]
   workflow_dispatch:
+  workflow_run:
+    workflows: ["Scrap Doctolib", "Scrap Keldoc", "Scrap Maiia", "Scrap Mapharma", "Scrap Ordoclic"]
+    types:
+      - completed
 
 jobs:
 
