--- a/.github/workflows/scrape_ordoclic.yml
+++ b/.github/workflows/scrape_ordoclic.yml
@@ -8,6 +8,10 @@ on:
   push:
     branches: ["main", "data-auto"]
   workflow_dispatch:
+  workflow_run:
+    workflows: ["Scrap Ordoclic"]
+    types:
+      - completed
 
 jobs:
 
