--- a/.github/workflows/scrape_doctolib.yml
+++ b/.github/workflows/scrape_doctolib.yml
@@ -7,7 +7,10 @@ on:
     - cron: "*/5 * * * *"
   push:
     branches: ["main", "data-auto"]
-  workflow_dispatch:
+  workflow_run:
+    workflows: ["Cron Doctolib"]
+    types:
+      - completed
 
 jobs:
 
