--- a/.github/workflows/scrape_mapharma.yml
+++ b/.github/workflows/scrape_mapharma.yml
@@ -7,6 +7,10 @@ on:
   push:
     branches: ["main", "data-auto"]
   workflow_dispatch:
+  workflow_run:
+    workflows: ["Cron Mapharma"]
+    types:
+      - completed
 
 jobs:
 
