--- a/.github/workflows/scrape_mapharma.yml
+++ b/.github/workflows/scrape_mapharma.yml
@@ -39,6 +39,7 @@ jobs:
           git switch data-auto
           cp /tmp/mapharma.json data/output/pool/mapharma.json
       - uses: stefanzweifel/git-auto-commit-action@v4
+        continue-on-error: true
         with:
             commit_message: "Updated scraper data: mapharma (pool/mapharma.json)"
             file_pattern: data/output/pool/mapharma.json
