--- a/.github/workflows/scrape_doctolib.yml
+++ b/.github/workflows/scrape_doctolib.yml
@@ -39,6 +39,7 @@ jobs:
           git switch data-auto
           cp /tmp/doctolib.json data/output/pool/doctolib.json
       - uses: stefanzweifel/git-auto-commit-action@v4
+        continue-on-error: true
         with:
             commit_message: "Updated scraper data: doctolib (pool/doctolib.json)"
             file_pattern: data/output/pool/doctolib.json
