--- a/.github/workflows/scrape_maiia.yml
+++ b/.github/workflows/scrape_maiia.yml
@@ -40,6 +40,7 @@ jobs:
           git switch data-auto
           cp /tmp/maiia.json data/output/pool/maiia.json
       - uses: stefanzweifel/git-auto-commit-action@v4
+        continue-on-error: true
         with:
             commit_message: "Updated scraper data: maiia (pool/maiia.json)"
             file_pattern: data/output/pool/maiia.json
