--- a/.github/workflows/scrape_ordoclic.yml
+++ b/.github/workflows/scrape_ordoclic.yml
@@ -40,6 +40,7 @@ jobs:
           git switch data-auto
           cp /tmp/ordoclic.json data/output/pool/ordoclic.json
       - uses: stefanzweifel/git-auto-commit-action@v4
+        continue-on-error: true
         with:
             commit_message: "Updated scraper data: ordoclic (pool/ordoclic.json)"
             file_pattern: data/output/pool/ordoclic.json
