--- a/.github/workflows/scrape_mapharma.yml
+++ b/.github/workflows/scrape_mapharma.yml
@@ -5,7 +5,7 @@ on:
   schedule:
     - cron: "*/5 * * * *"
   push:
-    branches: ["main", "data-auto"]
+    branches: ["main"]
   workflow_dispatch:
   workflow_run:
     workflows: ["Cron Mapharma"]
