edited doctolib*.py: put hard-coded values in config file

--- a/config.json
+++ b/config.json
@@ -140,7 +140,7 @@
         "center_types": {
           "pharmacie": "drugstore",
           "medecin": "general-practitioner",
-          "*": "vaccination_center"
+          "*": "vaccination-center"
         },
         "categories": [
           "hopital-public",
