Add a script to count appointments per vaccine type

--- a/config.json
+++ b/config.json
@@ -20,6 +20,7 @@
       "chronodoses": "data/output/stats_chronodoses.json",
       "by_date": "stats_by_date.json",
       "by_date_dep": "stats_by_date_dep.json",
+      "by_vaccine_type": "data/output/stats_by_vaccine.json",
       "center_types": "stats_center_types.json",
       "global": "stats.json"
     },
