Ajout motifs vacacination doctolib

--- a/config.json
+++ b/config.json
@@ -108,8 +108,12 @@
           "18 à 54",
           "55 ans",
           "70 ans",
+          "50 ans",
+          "18 ans",
+          "16 ans",
           "astra Zeneca",
           "femmes enceintes",
+          "grossesse",
           "injection unique",
           "janssen",
           "je ne suis pas professionnel de santé",
@@ -124,7 +128,9 @@
           "public",
           "vaccination au centre",
           "vaccination covid",
-          "vaccination pfizer"
+          "vaccination pfizer",
+          "assesseur",
+          "vote"
         ]
       },
       "center_scraper": {
