Prise en compte nouveau motifs doctolib
Correction de la #461

--- a/config.json
+++ b/config.json
@@ -111,6 +111,7 @@
           "50 ans",
           "18 ans",
           "16 ans",
+          "eligibles",
           "astra Zeneca",
           "femmes enceintes",
           "grossesse",
