Doctolib - Ajout motives

--- a/config.json
+++ b/config.json
@@ -112,6 +112,7 @@
           "18 ans",
           "16 ans",
           "eligibles",
+          "éligibles",
           "astra Zeneca",
           "femmes enceintes",
           "grossesse",
