--- a/config.json
+++ b/config.json
@@ -139,7 +139,7 @@
           "réservable en ligne",
           "comorbidités",
           "enceinte",
-          "immunodéprimée"
+          "immunodéprimée",
           "18",
           "consultation",
           "eligibles",
