--- a/config.json
+++ b/config.json
@@ -371,6 +371,10 @@
         "valid_reasons": [
           "Premiere injection COVID 19",
           "Première injection vaccinale COVID-19",
+          "Rendez-vous de première vaccination Covid-19",
+          "1ere vaccination astra",
+          "Injection vaccinale COVID-19 - Janssen",
+          "Injection monodose Janssen",
           "Injection vaccinale monodose Janssen"
         ]
       },
