Added keldoc center scraper

--- a/config.json
+++ b/config.json
@@ -225,6 +225,9 @@
           "1° injection",
           "première injection"
         ]
+      },
+      "center_scraper": {
+        "result_path": "data/output/keldoc_centers.json"
       }
     },
     "maiia": {
