--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,6 +7,19 @@ on:
     branches: ["main"]
 
 jobs:
+  contributors:
+    name: "List contributors"
+    runs-on: "ubuntu-20:04"
+    steps:
+      - uses: "actions/checkout@v2"
+      - uses: "actions/setup-python@v2"
+        with:
+          python-version: "3.8"
+      - name: "Install dependencies"
+        run: scripts/install
+      - name: "List all contributors"
+        run: scripts/contributors
+
   test:
     name: "Test"
     runs-on: "ubuntu-20.04"
