Edited setup.cfg: omit export_pool.py, we don't currently use this file

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,4 +4,6 @@ addopts = scraper/ tests/ --doctest-modules
 [coverage:run]
 omit = venv/*
        scraper/profiler.py
+       # not used for now
+       scraper/export/export_pool.py
 include = scraper/*, tests/*
